--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -26,11 +26,12 @@ dependencies:
   tus_client_file_store:
     path: ../
   tus_client: ^1.0.0
-  cross_file: ^0.1.0
-  file_picker: ^2.1.4
-  path: ^1.7.0
-  path_provider: ^1.6.14
-  url_launcher: ^5.7.10
+  cross_file: ^0.3.3+6
+  http: ^0.13.6
+  path: ^1.8.1
+  file_picker: ^5.0.0
+  path_provider: ^2.1.1
+  url_launcher: ^6.1.11
 
 
   # The following adds the Cupertino Icons font to your application.
