--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,17 @@
 name: tus_client_file_store
 description: A file based storage for tus_client that you can use to save the state resumable uploads even after restarting device.
-version: 1.0.0
+version: 1.0.1
 homepage: https://github.com/jjmutumi/tus_client_file_store
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.17.0 <2.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  path: ^1.7.0
+  path: ^1.8.1
   tus_client: ^1.0.0
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
